@@ -18,6 +18,8 @@ Release 0.21.1 - Unreleased
     HDFS-1444. Test related code of build.xml is error-prone and needs to be
     re-aligned. (cos)
 
+    HDFS-1343. Instrumented build should be concentrated in one build area (cos)
+
 Release 0.21.0 - 2010-08-13
 
   INCOMPATIBLE CHANGES
